assignment 3/comp
In file included from mad_parser.y:3:0:
node.h:10:30: error: expected ‘;’ at end of member declaration
  node(string con, node_type t)
                              ^
node.h:11:29: error: expected ‘;’ at end of member declaration
  node(const char* con, int t)
                             ^
mad_parser.y: In function ‘int main()’:
mad_parser.y:233:2: error: ‘yydebug’ was not declared in this scope
  yydebug = 0;
  ^
In file included from mad_lexer.l:3:0:
node.h:10:30: error: expected ‘;’ at end of member declaration
  node(string con, node_type t)
                              ^
node.h:11:29: error: expected ‘;’ at end of member declaration
  node(const char* con, int t)
                             ^
